--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -110,3 +110,521 @@
     top: 8px !important;
     margin-top: -3px !important;
 }
+
+.lift {
+    box-shadow: 0 0.15rem 1.75rem 0 rgba(33, 40, 50, 0.15);
+    transition: transform 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.lift:hover {
+    transform: translateY(-0.3333333333rem);
+    box-shadow: 0 0.5rem 2rem 0 rgba(33, 40, 50, 0.25);
+}
+
+.lift:active {
+    transform: none;
+    box-shadow: 0 0.15rem 1.75rem 0 rgba(33, 40, 50, 0.15);
+}
+
+.lift-sm {
+    box-shadow: 0 0.125rem 0.25rem 0 rgba(33, 40, 50, 0.2);
+}
+
+.lift-sm:hover {
+    transform: translateY(-0.1666666667rem);
+    box-shadow: 0 0.25rem 1rem 0 rgba(33, 40, 50, 0.25);
+}
+
+.lift-sm:active {
+    transform: none;
+    box-shadow: 0 0.125rem 0.25rem 0 rgba(33, 40, 50, 0.2);
+}
+
+.avatar {
+    -webkit-transform: translate3d(0, -50%, 0);
+    -moz-transform: translate3d(0, -50%, 0);
+    -o-transform: translate3d(0, -50%, 0);
+    -ms-transform: translate3d(0, -50%, 0);
+    transform: translate3d(0, -50%, 0);
+}
+
+
+.m-0 {
+    margin: 0 !important;
+}
+
+.m-1 {
+    margin: 0.25rem !important;
+}
+
+.m-2 {
+    margin: 0.5rem !important;
+}
+
+.m-3 {
+    margin: 1rem !important;
+}
+
+.m-4 {
+    margin: 1.5rem !important;
+}
+
+.m-5 {
+    margin: 2.5rem !important;
+}
+
+.m-10 {
+    margin: 6rem !important;
+}
+
+.m-15 {
+    margin: 9rem !important;
+}
+
+.m-auto {
+    margin: auto !important;
+}
+
+.mx-0 {
+    margin-right: 0 !important;
+    margin-left: 0 !important;
+}
+
+.mx-1 {
+    margin-right: 0.25rem !important;
+    margin-left: 0.25rem !important;
+}
+
+.mx-2 {
+    margin-right: 0.5rem !important;
+    margin-left: 0.5rem !important;
+}
+
+.mx-3 {
+    margin-right: 1rem !important;
+    margin-left: 1rem !important;
+}
+
+.mx-4 {
+    margin-right: 1.5rem !important;
+    margin-left: 1.5rem !important;
+}
+
+.mx-5 {
+    margin-right: 2.5rem !important;
+    margin-left: 2.5rem !important;
+}
+
+.mx-10 {
+    margin-right: 6rem !important;
+    margin-left: 6rem !important;
+}
+
+.mx-15 {
+    margin-right: 9rem !important;
+    margin-left: 9rem !important;
+}
+
+.mx-auto {
+    margin-right: auto !important;
+    margin-left: auto !important;
+}
+
+.my-0 {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+}
+
+.my-1 {
+    margin-top: 0.25rem !important;
+    margin-bottom: 0.25rem !important;
+}
+
+.my-2 {
+    margin-top: 0.5rem !important;
+    margin-bottom: 0.5rem !important;
+}
+
+.my-3 {
+    margin-top: 1rem !important;
+    margin-bottom: 1rem !important;
+}
+
+.my-4 {
+    margin-top: 1.5rem !important;
+    margin-bottom: 1.5rem !important;
+}
+
+.my-5 {
+    margin-top: 2.5rem !important;
+    margin-bottom: 2.5rem !important;
+}
+
+.my-10 {
+    margin-top: 6rem !important;
+    margin-bottom: 6rem !important;
+}
+
+.my-15 {
+    margin-top: 9rem !important;
+    margin-bottom: 9rem !important;
+}
+
+.my-auto {
+    margin-top: auto !important;
+    margin-bottom: auto !important;
+}
+
+.mt-0 {
+    margin-top: 0 !important;
+}
+
+.mt-1 {
+    margin-top: 0.25rem !important;
+}
+
+.mt-2 {
+    margin-top: 0.5rem !important;
+}
+
+.mt-3 {
+    margin-top: 1rem !important;
+}
+
+.mt-4 {
+    margin-top: 1.5rem !important;
+}
+
+.mt-5 {
+    margin-top: 2.5rem !important;
+}
+
+.mt-10 {
+    margin-top: 6rem !important;
+}
+
+.mt-15 {
+    margin-top: 9rem !important;
+}
+
+.mt-auto {
+    margin-top: auto !important;
+}
+
+.me-0 {
+    margin-right: 0 !important;
+}
+
+.me-1 {
+    margin-right: 0.25rem !important;
+}
+
+.me-2 {
+    margin-right: 0.5rem !important;
+}
+
+.me-3 {
+    margin-right: 1rem !important;
+}
+
+.me-4 {
+    margin-right: 1.5rem !important;
+}
+
+.me-5 {
+    margin-right: 2.5rem !important;
+}
+
+.me-10 {
+    margin-right: 6rem !important;
+}
+
+.me-15 {
+    margin-right: 9rem !important;
+}
+
+.me-auto {
+    margin-right: auto !important;
+}
+
+.mb-0 {
+    margin-bottom: 0 !important;
+}
+
+.mb-1 {
+    margin-bottom: 0.25rem !important;
+}
+
+.mb-2 {
+    margin-bottom: 0.5rem !important;
+}
+
+.mb-3 {
+    margin-bottom: 1rem !important;
+}
+
+.mb-4 {
+    margin-bottom: 1.5rem !important;
+}
+
+.mb-5 {
+    margin-bottom: 2.5rem !important;
+}
+
+.mb-10 {
+    margin-bottom: 6rem !important;
+}
+
+.mb-15 {
+    margin-bottom: 9rem !important;
+}
+
+.mb-auto {
+    margin-bottom: auto !important;
+}
+
+.ms-0 {
+    margin-left: 0 !important;
+}
+
+.ms-1 {
+    margin-left: 0.25rem !important;
+}
+
+.ms-2 {
+    margin-left: 0.5rem !important;
+}
+
+.ms-3 {
+    margin-left: 1rem !important;
+}
+
+.ms-4 {
+    margin-left: 1.5rem !important;
+}
+
+.ms-5 {
+    margin-left: 2.5rem !important;
+}
+
+.ms-10 {
+    margin-left: 6rem !important;
+}
+
+.ms-15 {
+    margin-left: 9rem !important;
+}
+
+.ms-auto {
+    margin-left: auto !important;
+}
+
+.m-n1 {
+    margin: -0.25rem !important;
+}
+
+.m-n2 {
+    margin: -0.5rem !important;
+}
+
+.m-n3 {
+    margin: -1rem !important;
+}
+
+.m-n4 {
+    margin: -1.5rem !important;
+}
+
+.m-n5 {
+    margin: -2.5rem !important;
+}
+
+.m-n10 {
+    margin: -6rem !important;
+}
+
+.m-n15 {
+    margin: -9rem !important;
+}
+
+.mx-n1 {
+    margin-right: -0.25rem !important;
+    margin-left: -0.25rem !important;
+}
+
+.mx-n2 {
+    margin-right: -0.5rem !important;
+    margin-left: -0.5rem !important;
+}
+
+.mx-n3 {
+    margin-right: -1rem !important;
+    margin-left: -1rem !important;
+}
+
+.mx-n4 {
+    margin-right: -1.5rem !important;
+    margin-left: -1.5rem !important;
+}
+
+.mx-n5 {
+    margin-right: -2.5rem !important;
+    margin-left: -2.5rem !important;
+}
+
+.mx-n10 {
+    margin-right: -6rem !important;
+    margin-left: -6rem !important;
+}
+
+.mx-n15 {
+    margin-right: -9rem !important;
+    margin-left: -9rem !important;
+}
+
+.my-n1 {
+    margin-top: -0.25rem !important;
+    margin-bottom: -0.25rem !important;
+}
+
+.my-n2 {
+    margin-top: -0.5rem !important;
+    margin-bottom: -0.5rem !important;
+}
+
+.my-n3 {
+    margin-top: -1rem !important;
+    margin-bottom: -1rem !important;
+}
+
+.my-n4 {
+    margin-top: -1.5rem !important;
+    margin-bottom: -1.5rem !important;
+}
+
+.my-n5 {
+    margin-top: -2.5rem !important;
+    margin-bottom: -2.5rem !important;
+}
+
+.my-n10 {
+    margin-top: -6rem !important;
+    margin-bottom: -6rem !important;
+}
+
+.my-n15 {
+    margin-top: -9rem !important;
+    margin-bottom: -9rem !important;
+}
+
+.mt-n1 {
+    margin-top: -0.25rem !important;
+}
+
+.mt-n2 {
+    margin-top: -0.5rem !important;
+}
+
+.mt-n3 {
+    margin-top: -1rem !important;
+}
+
+.mt-n4 {
+    margin-top: -1.5rem !important;
+}
+
+.mt-n5 {
+    margin-top: -2.5rem !important;
+}
+
+.mt-n10 {
+    margin-top: -6rem !important;
+}
+
+.mt-n15 {
+    margin-top: -9rem !important;
+}
+
+.me-n1 {
+    margin-right: -0.25rem !important;
+}
+
+.me-n2 {
+    margin-right: -0.5rem !important;
+}
+
+.me-n3 {
+    margin-right: -1rem !important;
+}
+
+.me-n4 {
+    margin-right: -1.5rem !important;
+}
+
+.me-n5 {
+    margin-right: -2.5rem !important;
+}
+
+.me-n10 {
+    margin-right: -6rem !important;
+}
+
+.me-n15 {
+    margin-right: -9rem !important;
+}
+
+.mb-n1 {
+    margin-bottom: -0.25rem !important;
+}
+
+.mb-n2 {
+    margin-bottom: -0.5rem !important;
+}
+
+.mb-n3 {
+    margin-bottom: -1rem !important;
+}
+
+.mb-n4 {
+    margin-bottom: -1.5rem !important;
+}
+
+.mb-n5 {
+    margin-bottom: -2.5rem !important;
+}
+
+.mb-n10 {
+    margin-bottom: -6rem !important;
+}
+
+.mb-n15 {
+    margin-bottom: -9rem !important;
+}
+
+.ms-n1 {
+    margin-left: -0.25rem !important;
+}
+
+.ms-n2 {
+    margin-left: -0.5rem !important;
+}
+
+.ms-n3 {
+    margin-left: -1rem !important;
+}
+
+.ms-n4 {
+    margin-left: -1.5rem !important;
+}
+
+.ms-n5 {
+    margin-left: -2.5rem !important;
+}
+
+.ms-n10 {
+    margin-left: -6rem !important;
+}
+
+.ms-n15 {
+    margin-left: -9rem !important;
+}
