--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1,9 +1,3 @@
-/*
-Black = #343332
-Grey = #191A1A
- */
-
-
 #sidebar {
     background: white;
 }
@@ -62,4 +56,28 @@ a:hover {
 
 .dark-theme .dropdown-item:hover {
     background: #343332;
+}
+
+.form-floating > label {
+    color: #343332;
+}
+
+.alert-theme {
+    background: #FBFBFB;
+    color: #343332;
+}
+
+.dark-theme .alert-theme {
+    background: #343332;
+    color: white;
+    box-shadow: 0 1rem 3rem rgb(255 255 255 / 10%) !important;
+}
+
+
+.dark-theme .select2-container--default .select2-selection--multiple .select2-selection__choice__display {
+    color: white;
+}
+
+.dark-theme .select2-container--default .select2-selection--multiple .select2-selection__choice {
+    background: #343332 !important;
 }
